examples/test/testpolicy17984.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17984
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key20: value8
      key28: value7
      key22: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value42
      podSelector:
        matchLabels:
          key37: value13
          key17: value30
